<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/LinearLayout"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:paddingHorizontal="100dp"
        android:textSize="30sp"
        android:text="@string/press_buttons" />

    <Button
        android:id="@+id/btnViolet"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/violet" />

    <Button
        android:id="@+id/btnIndigo"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/indigo" />

    <Button
        android:id="@+id/btnBlue"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/blue" />

    <Button
        android:id="@+id/btnGreen"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/green" />

    <Button
        android:id="@+id/btnYellow"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/yellow" />

    <Button
        android:id="@+id/btnOrange"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/orange" />

    <Button
        android:id="@+id/btnRed"
        android:fontFamily="monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/red" />


</LinearLayout>